# Unicid

./: README.md
Algoritmos e Pensamento Computacional/: Atividade_2910.c  Atividade_avaliativa.c  CMakeLists.txt  Desafio_Criptografia.c  Ex1_aula_2409.c  Ex2_aula_2409.c  Ex4_aula_1709.c  Ex5_aula_1709.c  Ex5_aula_2409.c  Ex6_aula_1709.c  Ex9_aula_1709.c  Ex_.c  Ex_NomeAoContrario.c  Ex_bottons.c  Ex_encapsulamento.c  Ex_funcionario.c  Ex_if_else.c  Ex_tabuada.c  calculo.c  for.c  if_else.c  while.c
Algoritmos e Pensamento Computacional/exercicios_em_c/: Desafio_aula_2409.c  Ex2_aula_1709.c  Ex3_aula_1709.c  Ex7_aula_1709.c  Ex8_aula_1709.c  Ex_perimetro.c  Ex_while.c  produtos.txt
Algoritmos e Pensamento Computacional/main/: main.c
Desenvolvimento Front-End Para Web/aula1109/: index.html
Desenvolvimento Front-End Para Web/aula2808/: Produto02.html  index.html
Primeiro Semestre/Algoritmos e Pensamento Computacional/exercicios_em_c/: Atividade_avaliativa.c  Desafio_Progressoes.c  Ex1_aula_1709.c  Ex3_aula_2409.c  Ex4_aula_2409.c  Ex_alunos.c  Ex_aula_0511.c  Ex_for.c
Primeiro Semestre/Desenvolvimento Front-End Para Web/atividade01/: index.html
Primeiro Semestre/Desenvolvimento Front-End Para Web/aula2808/: produto01.html
